Add TLS support
Signed-off-by: Chaitanya Munukutla <chaitanya.m61292@gmail.com>